--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
 ###############################################################################
 # dev \u5F00\u53D1\u73AF\u5883
 ###############################################################################
+# \u65E5\u5FD7\u914D\u7F6E\u8DEF\u5F84
+logging.config=classpath:log4j2-dev.xml
+###############################################################################
