--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
 ###############################################################################
 # prod \u751F\u4EA7\u73AF\u5883
 ###############################################################################
+# \u65E5\u5FD7\u914D\u7F6E\u8DEF\u5F84
+logging.config=classpath:log4j2-prod.xml
+###############################################################################
