--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.profiles.active=dev
 # \u9ED8\u8BA4\u7AEF\u53E3
 server.port=10000
 ###############################################################################
+# \u9ED8\u8BA4\u6570\u636E\u6E90\u914D\u7F6E datasource
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+###############################################################################
