--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ server.port=10000
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 ###############################################################################
+# mybatis
+mybatis.type-aliases-package=com.dazzlzy.springbootseed.model
+mybatis.mapper-locations=mapper/**/*.xml
+###############################################################################
