--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.type-aliases-package=com.dazzlzy.springbootseed.model
 mybatis.mapper-locations=mapper/**/*.xml
 ###############################################################################
+# mapper
+mapper.mappers=com.dazzlzy.springbootseed.base.BaseMapper
+mapper.not-empty=false
+mapper.identity=Mysql
+###############################################################################
