--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <starter.mybatis.spring.version>1.3.2</starter.mybatis.spring.version>
         <starter.druid.version>1.1.9</starter.druid.version>
         <starter.mybatis.mapper.version>1.2.4</starter.mybatis.mapper.version>
+        <starter.mybatis.pagehelper.version>1.2.3</starter.mybatis.pagehelper.version>
 
         <log4j.version>2.10.0</log4j.version>
 
@@ -87,6 +88,12 @@
             <groupId>tk.mybatis</groupId>
             <artifactId>mapper-spring-boot-starter</artifactId>
             <version>${starter.mybatis.mapper.version}</version>
+        </dependency>
+        <!-- pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>${starter.mybatis.pagehelper.version}</version>
         </dependency>
 
         <!-- configuration: 用于自动识别ConfigurationProperties，可以从被@ConfigurationProperties注解的节点轻松的产生自己的配置元数据文件；
