mybatis接口注入，用户角色权限连表查询

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 ###############################################################################
 # mybatis
 mybatis.type-aliases-package=com.dazzlzy.springbootseed.model
-mybatis.mapper-locations=mapper/**/*.xml
+mybatis.type-handlers-package=com.dazzlzy.springbootseed.dao
+mybatis.mapper-locations=classpath*:mapper/**/*.xml
 ###############################################################################
 # mapper
 mapper.mappers=com.dazzlzy.springbootseed.base.BaseMapper
