基础配置与业务代码分离

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ mybatis.type-handlers-package=com.dazzlzy.springbootseed.dao
 mybatis.mapper-locations=classpath*:mapper/**/*.xml
 ###############################################################################
 # mapper
-mapper.mappers=com.dazzlzy.springbootseed.base.BaseMapper
+mapper.mappers=com.dazzlzy.common.base.BaseMapper
 mapper.not-empty=false
 mapper.identity=Mysql
 ###############################################################################
