--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 
         <starter.mybatis.spring.version>1.3.2</starter.mybatis.spring.version>
         <starter.druid.version>1.1.9</starter.druid.version>
-        <starter.mybatis.mapper.version>1.2.4</starter.mybatis.mapper.version>
-        <starter.mybatis.pagehelper.version>1.2.3</starter.mybatis.pagehelper.version>
+        <starter.mybatis.mapper.version>2.0.2</starter.mybatis.mapper.version>
+        <starter.mybatis.pagehelper.version>1.2.4</starter.mybatis.pagehelper.version>
 
         <commons.lang3.version>3.5</commons.lang3.version>
         <commons.collections.version>3.2.2</commons.collections.version>
@@ -36,6 +36,7 @@
         <commons.codec.version>1.11</commons.codec.version>
         <commons.configuration.version>1.10</commons.configuration.version>
         <commons.logging.version>1.2</commons.logging.version>
+        <redis.version>2.9.0</redis.version>
         <guava.version>23.0</guava.version>
         <nutz.version>1.r.65</nutz.version>
         <log4j.version>2.10.0</log4j.version>
@@ -72,6 +73,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${redis.version}</version>
         </dependency>
 
         <!-- db -->
