--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -20,3 +20,13 @@ spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
 spring.datasource.validationQuery=SELECT 1
 spring.datasource.filters=stat,log4j,wall,config
 ###############################################################################
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=123456
+spring.redis.timeout=10000ms
+spring.redis.jedis.pool.max-active=50
+spring.redis.jedis.pool.max-idle=5
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-wait=10000ms
+#spring.redis.cluster.nodes=127.0.0.1:6380,127.0.0.1:6381
+###############################################################################
