--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -30,3 +30,5 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.jedis.pool.max-wait=10000ms
 #spring.redis.cluster.nodes=127.0.0.1:6380,127.0.0.1:6381
 ###############################################################################
+swagger.enable=false
+###############################################################################
