--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,12 @@
         <commons.codec.version>1.11</commons.codec.version>
         <commons.configuration.version>1.10</commons.configuration.version>
         <commons.logging.version>1.2</commons.logging.version>
+        <mybatis.generator.version>1.3.6</mybatis.generator.version>
         <redis.version>2.9.0</redis.version>
         <guava.version>23.0</guava.version>
         <nutz.version>1.r.65</nutz.version>
         <log4j.version>2.10.0</log4j.version>
-        <mybatis.generator.version>1.3.6</mybatis.generator.version>
+        <swagger.version>2.9.0</swagger.version>
 
     </properties>
 
@@ -221,6 +222,16 @@
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
             <version>${mybatis.generator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
 
     </dependencies>
