--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,13 @@
 spring.profiles.active=dev
 # \u9ED8\u8BA4\u7AEF\u53E3
 server.port=10000
+# \u8BFB\u53D6maven\u53C2\u6570
+project.name=@name@
+project.version=@version@
+project.description=@description@
+project.author.name=@project.author.name@
+project.author.url=@project.author.url@
+project.author.email=@project.author.email@
 ###############################################################################
 # \u9ED8\u8BA4\u6570\u636E\u6E90\u914D\u7F6E datasource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
