--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <commons.logging.version>1.2</commons.logging.version>
         <mybatis.generator.version>1.3.6</mybatis.generator.version>
         <redis.version>2.9.0</redis.version>
+        <shiro.version>1.3.2</shiro.version>
         <guava.version>23.0</guava.version>
         <nutz.version>1.r.65</nutz.version>
         <log4j.version>2.10.0</log4j.version>
@@ -118,6 +119,18 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${starter.mybatis.pagehelper.version}</version>
+        </dependency>
+
+        <!-- shiro -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>${shiro.version}</version>
         </dependency>
 
         <!-- configuration: 用于自动识别ConfigurationProperties，可以从被@ConfigurationProperties注解的节点轻松的产生自己的配置元数据文件；
