--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <commons.configuration.version>1.10</commons.configuration.version>
         <commons.logging.version>1.2</commons.logging.version>
         <mybatis.generator.version>1.3.6</mybatis.generator.version>
+        <gson.version>2.8.2</gson.version>
+        <fastjson.version>1.2.47</fastjson.version>
         <redis.version>2.9.0</redis.version>
         <shiro.version>1.3.2</shiro.version>
         <guava.version>23.0</guava.version>
@@ -232,6 +234,16 @@
         </dependency>
 
         <!--tools Jar-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
